; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/platforms/cell/spufs/extr_context.c_spu_release_saved.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/platforms/cell/spufs/extr_context.c_spu_release_saved.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spu_context = type { i64, i32 }

@SPU_STATE_SAVED = common dso_local global i64 0, align 8
@SPU_SCHED_WAS_ACTIVE = common dso_local global i32 0, align 4
@SPU_SCHED_SPU_RUN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @spu_release_saved(%struct.spu_context* %0) #0 {
  %2 = alloca %struct.spu_context*, align 8
  store %struct.spu_context* %0, %struct.spu_context** %2, align 8
  %3 = load %struct.spu_context*, %struct.spu_context** %2, align 8
  %4 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @SPU_STATE_SAVED, align 8
  %7 = icmp ne i64 %5, %6
  %8 = zext i1 %7 to i32
  %9 = call i32 @BUG_ON(i32 %8)
  %10 = load i32, i32* @SPU_SCHED_WAS_ACTIVE, align 4
  %11 = load %struct.spu_context*, %struct.spu_context** %2, align 8
  %12 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %11, i32 0, i32 1
  %13 = call i64 @test_and_clear_bit(i32 %10, i32* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %24

15:                                               ; preds = %1
  %16 = load i32, i32* @SPU_SCHED_SPU_RUN, align 4
  %17 = load %struct.spu_context*, %struct.spu_context** %2, align 8
  %18 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %17, i32 0, i32 1
  %19 = call i64 @test_bit(i32 %16, i32* %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %15
  %22 = load %struct.spu_context*, %struct.spu_context** %2, align 8
  %23 = call i32 @spu_activate(%struct.spu_context* %22, i32 0)
  br label %24

24:                                               ; preds = %21, %15, %1
  %25 = load %struct.spu_context*, %struct.spu_context** %2, align 8
  %26 = call i32 @spu_release(%struct.spu_context* %25)
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i64 @test_and_clear_bit(i32, i32*) #1

declare dso_local i64 @test_bit(i32, i32*) #1

declare dso_local i32 @spu_activate(%struct.spu_context*, i32) #1

declare dso_local i32 @spu_release(%struct.spu_context*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
